# polkadot-stack-template

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.eth-rpc  INSTALL.md  Makefile  README.md  TOOLS.md  deployments.json
.github/workflows/: ci-e2e-dex.yml  ci-e2e.yml  deploy-frontend.yml
blockchain/: Dockerfile  chain_spec.json  docker-compose.yml
blockchain/precompiles/asset-conversion/: Cargo.toml
blockchain/precompiles/asset-conversion/src/: lib.rs
blockchain/precompiles/assets/: Cargo.toml
blockchain/precompiles/assets/src/: lib.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: genesis_config_presets.rs  lib.rs
circuits/: .gitignore  build.sh  medical_disclosure.circom  package-lock.json  package.json
circuits/test/: gen_fixture.mjs  test_circuit.mjs  test_e2e.mjs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: contract.rs  market.rs  mod.rs  pallet.rs  statement.rs  tx.rs
contracts/evm/: hardhat.config.ts  package.json
contracts/evm/scripts/: deploy.ts
contracts/pvm/: hardhat.config.ts  package-lock.json  package.json
contracts/pvm-rust/: Cargo.toml  DexRouter.sol  DotTransfer.sol  build.rs  package-lock.json  package.json  tsconfig.json
contracts/pvm-rust/e2e/: .prettierrc  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/pvm-rust/e2e/test/: DexRouter.test.ts
contracts/pvm-rust/scripts/: deploy.ts
contracts/pvm-rust/src/: dex-router.rs  dot_transfer.rs  encoding.rs  mock_api.rs
contracts/pvm/.papi/: polkadot-api.json
contracts/pvm/contracts/: MedicAuthority.sol  MedicalMarket.sol  Verifier.sol
contracts/pvm/scripts/: _deployments.ts  _inspect-paseo.ts  _papi.ts  bootstrap-demo-medic.ts  check-events.ts  compute-multisig.ts  deploy-market.ts  deploy-medic-authority.ts  fund-multisig.ts  integration-header-body.ts  multisig-add-medic.ts  multisig-map-account.ts  set-deployments.ts  test-multisig-flow.ts  test-paseo-medic-flow.ts  verify-state.ts
contracts/pvm/test/: MedicAuthority.test.ts  MedicalMarket.test.ts  ProofOfExistence.test.ts
docs/: Circom_research.md  DEPLOYMENT.md  INSTALL.md  TOOLS.md  login-pairing-flow.md  project-guidelines.md  prokect.md  pvm-zk-research.md
docs/product/: ARCHITECTURE.md  DEMO.md  EXTERNAL_DEPS.md  FLOWS.md  FRONTEND_SPEC.md  IMPACT.md  IMPLEMENTATION_PLAN.md  PITCH_5MIN.md  POLKADOT_INTEGRATION_GOTCHAS.md  PRIVACY.md  PROBLEM.md  README.md  RISKS.md  SKILLS.md  STAKEHOLDERS.md  USE_CASES.md  WHY_POLKADOT.md  ZKCP_DESIGN_OPTIONS.md  ZK_ON_PVM_OPEN_QUESTION.md
docs/product/parked/: statement-store-raw-submit.patch
examples/: medical-record-v4.json  signed-record-v4.json  signed-record.json
scripts/: common.sh  deploy-frontend.sh  deploy-paseo.sh  start-all.sh  start-dev-with-contracts.sh  start-frontend.sh  tail-logs.sh  test-statement-store-smoke.sh
skills/frontend-dev/: SKILL.md
skills/nova-wallet/: SKILL.md
skills/polkadot-composition/: SKILL.md
skills/stack-cli/: SKILL.md
skills/zk-circuits/: SKILL.md
web/: .env.example  .env.local.example  dist.bulletin.car  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/.papi/: polkadot-api.json
web/.papi/descriptors/: generated.json  package.json
web/.papi/metadata/: bulletin.scale  stack_template.scale
web/public/: nova-metadata.json
web/public/circuits/: medical_disclosure.wasm
web/scripts/: gen-example-v4.ts  patch-papi-cli.mjs  patch-sdk-statement.mjs
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: ContractProofOfExistencePage.tsx  FileDropZone.tsx  NovaWalletConnect.tsx  Spinner.tsx  Toast.tsx  VerifiedBadge.tsx  WalletSelector.tsx
web/src/config/: deployments.ts  dex.ts  evm.ts  network.ts
web/src/hooks/: useAccount.ts  useBulletin.ts  useChain.ts  useConnection.ts  useMedicAuthority.ts  usePairing.ts  useReviveCall.ts  useStatementStore.ts
web/src/lib/: multisigAuthority.ts
web/src/pages/: AccountsPage.tsx  DexPage.tsx  DoctorInbox.tsx  EvmContractPage.tsx  GovernanceDashboard.tsx  HomePage.tsx  MedicSign.tsx  MyTransfersPage.tsx  PalletPage.tsx  PatientDashboard.tsx  PvmContractPage.tsx  ResearcherBuy.tsx  (+2 more)
(+10 files in other folders)
