[workspace]

[package]
name = "dex-router"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
build = "build.rs"

[[bin]]
name = "dex-router"
path = "src/dex-router.rs"

[lib]
name = "dex_router_encoding"
path = "src/encoding.rs"

[dependencies]
pvm-contract-macros = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca" }
pvm-contract-types = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca", features = ["alloc"] }
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca" }
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
polkavm-derive = { version = "0.31.0" }
ruint = { version = "1.17", default-features = false }

[features]
abi-gen = []

[build-dependencies]
cargo-pvm-contract-builder = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false
