[package]
name = "dot-transfer"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
build = "build.rs"

[[bin]]
name = "dot-transfer"
path = "src/dot_transfer.rs"

[dependencies]
pvm-contract-macros = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca" }
pvm-contract-types = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca", features = ["alloc"] }
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca" }
pallet-revive-uapi = { version = "0.10", default-features = false }
polkavm-derive = "0.31.0"
ruint = { version = "1.17", default-features = false }

[build-dependencies]
cargo-pvm-contract-builder = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "586425ca" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false

[features]
abi-gen = []
