[package]
name = "pallet-assets-precompiles"
version = "0.5.0"
description = "ERC20 precompile for pallet-assets (vendored from polkadot-sdk with delegatecall guard)"
edition = "2021"
license = "Apache-2.0"

[dependencies]
codec = { workspace = true }
polkadot-sdk = { workspace = true, features = [
	"frame-support",
	"pallet-assets",
	"pallet-revive",
] }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
